--- a/src/components/common/Cart/cart.module.css
+++ b/src/components/common/Cart/cart.module.css
@@ -3,8 +3,8 @@
 }
 
 .icon {
-       width: 150px;
-       height: 150px;
+       width: 200px;
+       height: 200px;
 }
 
 .name {
@@ -12,9 +12,21 @@
        max-width: 100px;
        position: absolute;
        left: 5px;
-       bottom: 25px;
-       color: white;
+       bottom: 40px;
+       color: rgb(70, 0, 0);
        font-size: 18px;
+       font-weight: 800;
+}
+
+.description {
+       margin: 0;
+       max-width: 100px;
+       position: absolute;
+       left: 5px;
+       bottom: 25px;
+       color: rgb(70, 0, 0);
+       font-size: 14px;
+       font-weight: 600;
 }
 
 .price {
@@ -23,6 +35,7 @@
        position: absolute;
        left: 5px;
        bottom: 5px;
-       color: white;
+       color: rgb(71, 0, 0);
        font-size: 18px;
+       font-weight: 600;
 }
