--- a/src/components/common/Menu/menu.module.css
+++ b/src/components/common/Menu/menu.module.css
@@ -7,6 +7,12 @@
        justify-content: space-between;
 }
 
+.list {
+       background-color: #dbc8c8;
+       width: 100%;
+       height: 500px;
+}
+
 .carousel {
        width: 1100px;
 }
@@ -69,6 +75,12 @@
        background-color: yellow;
        color: #8d5151;
        border: none;
+}
+
+.btnCarouselBook:hover {
+       bottom: 165px;
+       background-color: orange;
+       
 }
 
 .titlePresents {
