--- a/src/components/Card/card.module.css
+++ b/src/components/Card/card.module.css
@@ -12,7 +12,7 @@
        max-width: 100px;
        position: absolute;
        left: 5px;
-       bottom: 40px;
+       top: 40px;
        color: rgb(70, 0, 0);
        font-size: 18px;
        font-weight: 800;
@@ -23,7 +23,7 @@
        max-width: 100px;
        position: absolute;
        left: 5px;
-       bottom: 25px;
+       top: 60px;
        color: rgb(70, 0, 0);
        font-size: 14px;
        font-weight: 600;
@@ -34,7 +34,7 @@
        width: 100px;
        position: absolute;
        left: 5px;
-       bottom: 5px;
+       top: 80px;
        color: rgb(71, 0, 0);
        font-size: 18px;
        font-weight: 600;
