--- a/src/components/pages/ProductPage/productPage.module.css
+++ b/src/components/pages/ProductPage/productPage.module.css
@@ -1,6 +1,7 @@
 .goodWrapper {
        margin-bottom: 30px;
 }
+
 .productContainer {
        display: flex;
        margin-top: 30px;
@@ -45,7 +46,26 @@
 }
 
 .btnPutInCart:hover {
-       margin-bottom: 10px;
+       margin-top: 15px;
        background-color: #ff8800;
-       
+       border: none;
+}
+
+.btnPutInCart>span:hover {
+       color: rgb(152, 255, 18);
+}
+
+.btnGoToCart {
+       min-width: 300px;
+       margin: 20px 0 0 30px;
+       height: 50px;
+       background-color: #ffffff;
+       color: #ff8800;
+       border: 1px solid #ff8800;
+       font-size: 20px;
+       font-weight: 700;
+}
+
+.linkGoToCart:hover {
+       text-decoration: underline;
 }
