--- a/src/components/Carousel/carousel.module.css
+++ b/src/components/Carousel/carousel.module.css
@@ -19,7 +19,7 @@
        background-color: rgb(185, 170, 170);
 }
 
-.blockCarousel {
+/* .blockCarousel {
        position: relative;
 }
 
@@ -46,10 +46,10 @@
        color: white;
        font-size: 22px;
        font-weight: 400;
-}
+} */
 
 
-.btnCarouselBook {
+/* .btnCarouselBook {
        min-width: 200px;
        height: 50px;
        position: absolute;
@@ -66,7 +66,7 @@
        bottom: 165px;
        background-color: orange;
        
-}
+} */
 
 .titlePresents {
        max-width: 665px;
@@ -81,7 +81,7 @@
 }
 
 .subtitlePresents {
-       position: absolute;
+       position: absolute;  
        top: 240px;
        left: 390px;
        color: white;
