--- a/src/components/Menu/menu.module.css
+++ b/src/components/Menu/menu.module.css
@@ -2,6 +2,8 @@
        background-color: #dbc8c8;
        width: 100%;
        height: 500px;
+       overflow: scroll;
+       overflow-x: hidden;
 }
 
 .categoriesLink {
