Cart, registration, auth

--- a/src/components/pages/GoodsPageForAdmin/goodsPage.module.css
+++ b/src/components/pages/GoodsPageForAdmin/goodsPage.module.css
@@ -1,6 +1,9 @@
 .searchAndSelectBlock {
-       display: flex;
-       justify-content: space-between;
+       display: grid;
+       grid-template-columns: repeat(3, 1fr);
+       grid-column-gap: 20px;
+       grid-row-gap: 20px;
+
 }
 
 .inputSearch {
@@ -14,3 +17,22 @@
 .slider {
        width: 400px;
 }
+
+.titleForSort {
+       margin: 10px 0 5px;
+       font-size: 14px;
+       font-weight: 600;
+}
+
+.tableForGoods {
+       margin-top: 25px;
+}
+
+.filterOption {
+       width: 400px;
+}
+
+.defaultBtn {
+       width: 200px;
+}
+
