--- a/src/components/pages/LoginPage/loginPage.module.css
+++ b/src/components/pages/LoginPage/loginPage.module.css
@@ -46,4 +46,17 @@
        border: none;
 }
 
+.inputForLogin {
+       margin-top: 20px;
+}
 
+.inputForPassword {
+       margin-top: 10px;
+}
+
+.form p {
+       font-size: 14px;
+       font-weight: 600;
+       color: red;
+       margin-top: 5px;
+}
