--- a/src/components/GoodCategory/goodCategory.module.css
+++ b/src/components/GoodCategory/goodCategory.module.css
@@ -20,5 +20,15 @@
        display: flex;
        flex-wrap: wrap;
        column-gap: 155px;
-       row-gap: 40px;     
+       row-gap: 40px;
+}
+
+.goBackBtn {
+       border: none;
+       background-color: white;
+}
+
+.goBackBtn:hover {
+       color: blue;
+       text-decoration: underline;
 }
