--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,7 +1,7 @@
-
 .headerWrapper {
        display: flex;
        /* justify-content: space-between; */
+       
 }
 
 .searchAuthAndBasketBlock {
@@ -10,6 +10,7 @@
        margin-bottom: 10px;
        gap: 15px;
 }
+
 .searchButton {
        width: 250px;
 }
@@ -20,6 +21,7 @@
        font-weight: 600;
 
 }
+
 .bas {
        margin: 0;
 }
@@ -30,4 +32,12 @@
 
 .searchInput {
        width: 800px;
+}
+
+.goodsCount {
+       margin-left: 7px;
+       border: 2px solid #240324;
+       padding: 3px;
+       border-radius: 5px;
+       color: #240324;
 }
