--- a/src/components/Menu/menu.module.css
+++ b/src/components/Menu/menu.module.css
@@ -1,5 +1,5 @@
 .list {
-       background-color: #dbc8c8;
+       background-color: #ffcfcf;
        width: 100%;
        height: 500px;
        overflow: scroll;
@@ -20,6 +20,6 @@
 }
 .categories:hover {
        text-decoration: underline;
-       background-color: rgb(185, 170, 170);
+       background-color: rgb(255, 145, 145);
 }
 
