--- a/src/components/Main/main.module.css
+++ b/src/components/Main/main.module.css
@@ -1,3 +1,18 @@
 .menuWrapper {
        display: flex;
 }
+
+.linkToHeader {
+       text-decoration: none;
+       padding: 22px 0 23px;
+       max-width: 1400px;
+       margin: 0 auto;
+       display: block;
+       background-color: rgba(0, 0, 0, 0.05);
+       text-align: center;
+       font-size: 13px;
+}
+
+.linkToHeader:hover {
+       background-color: rgba(231, 4, 4, 0.05);
+}
