--- a/src/components/pages/RegistrationPage/registrationPage.module.css
+++ b/src/components/pages/RegistrationPage/registrationPage.module.css
@@ -94,3 +94,10 @@
        display: flex;
        align-items: center;
 }
+
+.congratulate {
+       font-size: 19px;
+       font-weight: 700;
+       text-align: center;
+       color: orange;
+}
